# zabbix-processor

./: Cargo.toml  README.md
src/: main.rs
