[package]
name = "zabbix-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.26"
curl = "0.4.44"
hostname = "0.3.1"
howlong = "0.1.7"
jsonpath-rust = "0.2.0"
log = "0.4.17"
logwatcher = "0.1.1"
neofiglet = "0.1.1"
rhai-rand = "0.1.4"
rhai-sci = "0.1.7"
serde_json = "1.0.87"
tokio = "1.21.2"
ureq = "2.5.0"
better-panic = "0.3.0"
sensible-env-logger = "0.3.1"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies]
csv = "1.1"

[dependencies.rhai]
version = "1.10.1"
features = [
  "std",
  "serde",
  "decimal",
  "internals",
]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
